# django-easypay

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: admin.md  dashboard.md  installation.md  models.md  sandbox.md  security.md  signals.md
easypay/: CLAUDE.md  __init__.py  admin.py  apps.py  client.py  exceptions.py  models.py  signals.py  utils.py  views.py
easypay/dashboard/: __init__.py  api.py  mixins.py  serializers.py  statistics.py
easypay/sandbox/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
easypay/sandbox/migrations/: 0001_initial.py
easypay/sandbox/templates/easypay/: callback.html  sandbox.html
easypay/static/easypay/dashboard/: dashboard.css  dashboard.js
easypay/templates/easypay/admin/: payment_changelist.html
easypay/templates/easypay/dashboard/: base.html
scripts/: pre-push
tests/: __init__.py  conftest.py  models.py  settings.py  test_admin.py  test_client.py  test_dashboard.py  test_e2e_sandbox.py  test_logging.py  test_models.py  test_sandbox.py  test_security.py  test_signals.py  test_utils.py  urls.py
tests/migrations/: 0001_initial.py
