[project]
name = "django-easypay"
version = "2026.1.3"
description = "Django payment integration for EasyPay (KICC) PG"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Suchan An", email = "dobestan@gmail.com" }
]
requires-python = ">=3.14"
keywords = ["django", "payment", "easypay", "kicc", "pg", "korea"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
drf = ["djangorestframework>=3.15"]

[project.urls]
Homepage = "https://github.com/dobestan/django-easypay"
Repository = "https://github.com/dobestan/django-easypay"
Documentation = "https://github.com/dobestan/django-easypay#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easypay"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Django plugin
plugins = ["mypy_django_plugin.main"]

# Package-specific settings
[[tool.mypy.overrides]]
module = "easypay.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

# Third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "requests.*",
    "rest_framework.*",
]
ignore_missing_imports = true

# Dashboard modules (DRF optional, complex mixin patterns)
[[tool.mypy.overrides]]
module = ["easypay.dashboard.*"]
disable_error_code = ["attr-defined", "misc", "assignment", "type-arg", "no-untyped-def", "no-untyped-call", "no-any-return", "unused-ignore"]

# Admin modules can be less strict (Django admin typing is complex)
[[tool.mypy.overrides]]
module = ["easypay.admin", "easypay.sandbox.admin"]
disable_error_code = ["attr-defined", "misc", "assignment", "type-arg", "no-untyped-def", "no-untyped-call", "no-any-return"]

# Sandbox views (decorators are complex to type)
[[tool.mypy.overrides]]
module = "easypay.sandbox.views"
disable_error_code = ["no-untyped-def"]

# Test files can be less strict
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["misc", "type-arg", "no-untyped-call"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "djangorestframework>=3.15",
    "freezegun>=1.2",
    "mypy>=1.19",
    "pytest>=9.0",
    "pytest-django>=4.11",
    "responses>=0.23",
    "ruff>=0.14",
    "types-requests>=2.32",
]

# ============================================================
# Ruff Configuration
# ============================================================

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2026.1.3"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
